# funding-service-design-notification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dockerfile  manifest.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: codeql-analysis.yml  copilot.yml  copilot_deploy.yml  copilot_service.yml  deploy.yml  environment.yml  main.yml  package.yml  tag-to-release.yaml  tag-to-release.yml
app/: config.py  create_app.py
app/default/: error_routes.py
app/feature_flag/: feature_flags.py
app/notification/: examplar_data.py  notification_contents_base_class.py  routes.py  template_types.py
app/templates/: 400.html  header.html
config/: .env.default.example  __init__.py  default.py  development.py  unit_test.py
config/environments/: default.py  development.py  unit_test.py
config/envs/: default.py  dev.py  development.py  production.py  test.py  unit_test.py
copilot/frontend/: manifest.yml
copilot/fsd-notification/: manifest.yml
examplar_data/: application-json.py  application_data.py  assessment_data.py  magic_link_data.py
openapi/: api.yml  components.yml  utils.py
tests/: conftest.py  test_feature_flags.py  test_integration.py  test_notification_utils.py  test_route.py  test_routes.py  test_template_types.py
tests/local_data/: local_data.json
tests/test_application/: application_data.py  test_application.py  test_application_utils.py  test_mock_application.py  test_multi_input.py
tests/test_application_submission/: application_data.py  (+1 more)
(+50 files in other folders)
