[project]
name = "funding-service-design-notification"
version = "0.1.1"
description = "The funding service design notification service for the DLUHC."
authors = ["DLUHC"]
license = "MIT License"

requires-python = ">=3.10, <3.11"
dependencies = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "connexion[flask,swagger-ui,uvicorn]==3.1.0",
    "flask-talisman==1.1.0",
    "flask==3.0.3",
    "notifications-python-client==10.0.0",
    "openapi-spec-validator==0.7.1",
    "prance==23.6.21.0",
    "requests==2.32.3",
    "swagger-ui-bundle==1.1.0",
    "funding-service-design-utils",
]

[tool.isort]
profile = "black"
force_single_line = "true"

[tool.black]
line-length = 120
experimental-string-processing = 1

[tool.flake8]
max-line-length = 120
count = true

[tool.uv]

[tool.uv.sources]
funding-service-design-utils = { git = "https://github.com/communitiesuk/funding-service-design-utils", branch = "investigate/s3-sqs" }

[dependency-groups]
dev = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "black==24.8.0",
    "debugpy==1.8.5",
    "deepdiff==7.0.1",
    "flake8-pyproject==1.2.3",
    "json2html==1.3.0",
    "moto[s3,sqs]==5.0.10",
    "pre-commit==4.0.1",
    "pytest==8.3.2",
    "pytest-env==1.1.3",
    "pytest-flask==1.3.0",
    "pytest-mock==3.14.0",
]
